[package]
name = "starknet-bootstrap"
version = "0.1.0"
authors = ["Jonathan LEI <me@xjonathan.dev>"]
license = "MIT OR Apache-2.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/xJonathanLEI/starknet-bootstrap"
description = "Bootstrap a new Starknet network by declaring and deploying commonly used classes and contracts"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.8", features = ["derive"] }
ethers = "2.0.11"
hex = "0.4.3"
serde_json = "1.0.108"
starknet = "0.7.0"
tokio = { version = "1.34.0", default-features = false, features = ["macros", "rt-multi-thread", "time"] }
url = "2.5.0"
